fixed some css problemas. Added collapse to navbar, but not working currently

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,6 @@
 
 .form-container{
   padding: 30px;
-  width: 700px;
+  width: 50%;
   margin: auto;
 }
